productionise-using-sidecars/manifests/v1/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
    release: gophercon
    version: v1
spec:
  selector:
    app: frontend
    release: gophercon
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: mertrics
      protocol: TCP
      port: 9091
      targetPort: 9091
