productionise-using-sidecars/manifests/v1/frontend/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    version: v1
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - localhost
    secretName: frontend-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
